<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/loginEmailTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:autofillHints="email"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/LoginEmailTextBox"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/loginPasswordTextBox"
        android:background="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/LoginPasswordTextBox"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailTextBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="216dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/LoginText"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:layout_marginBottom="8dp"
        android:text="@string/LoginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordTextBox"
        app:layout_constraintVertical_bias="0.093" />

</androidx.constraintlayout.widget.ConstraintLayout>