<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/MovieTextBox"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:allowUndo="true"
        android:background="@color/colorWhite"
        android:hint="@string/MovieTextBox"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ThumbsUpButton"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/thumbs_up_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="pressThumbsUp"
        android:text="@string/ThumbsUpButton"
        app:layout_constraintBottom_toTopOf="@+id/MovieTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ThumbsDownButton"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/thumbs_down_button"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="pressThumbsDown"
        android:text="@string/ThumbsDownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MovieTextBox" />

    <TextView
        android:id="@+id/confirmationText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ThumbsDownButton"
        app:layout_constraintVertical_bias="0.212" />
</androidx.constraintlayout.widget.ConstraintLayout>